Fixed rating card on mobile

--- a/styles/blocks/_rating-card.scss
+++ b/styles/blocks/_rating-card.scss
@@ -255,4 +255,20 @@
         row-gap: 24px;
     }
   }
+
+  @include bp(m) {
+    &__button {
+      padding-left: 40px;
+      padding-right: 40px;
+    }
+
+    &__overall-rating {
+      padding-left: 22px;
+      padding-right: 22px;
+    }
+
+    &__rating {
+      gap: 4px;
+    }
+  }
 }
